k8s.yaml

# --- common (namespace) ---
apiVersion: v1
kind: Namespace
metadata:
  name: sre-mini


# --- app (sre-mini) ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-mini
  namespace: sre-mini
  labels:
    app: sre-mini
spec:
  replicas: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 180
  minReadySeconds: 5
  selector:
    matchLabels:
      app: sre-mini
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sre-mini
      
    spec:
      serviceAccountName: sre-mini
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 15
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 80
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: sre-mini
                topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: tmp
        emptyDir: {}
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: docker.io/nextn1/sre-mini:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 3
            timeoutSeconds: 1
            failureThreshold: 2
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 2
            timeoutSeconds: 1
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["sh","-c","sleep 5"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          
---
apiVersion: v1
kind: Service
metadata:
  name: sre-mini
  namespace: sre-mini
  labels:
    app: sre-mini
spec:
  selector:
    app: sre-mini
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-mini
  namespace: sre-mini
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sre-mini.local
      secretName: sre-mini-tls
  rules:
    - host: sre-mini.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sre-mini
                port:
                  number: 80
